This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: struct help in the interpreter does not explain about the fmt option
Type: behavior Stage:
Components: Documentation, Extension Modules Versions: Python 2.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: mark.dickinson Nosy List: georg.brandl, ggenellina, mark.dickinson, orsenthil
Priority: low Keywords: easy, patch

Created on 2009-10-07 18:10 by orsenthil, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
struct.diff ggenellina, 2009-10-08 03:38
Messages (4)
msg93709 - (view) Author: Senthil Kumaran (orsenthil) * (Python committer) Date: 2009-10-07 18:10
>>> help(struct) mentions the functions which use fmt characters.
The builtin help does not mention the fmt characters and their meaning.
One should go online if he has to refer them.
msg93733 - (view) Author: Gabriel Genellina (ggenellina) Date: 2009-10-08 03:38
The module docstring (for _struct) already existed, but was not exposed 
as struct.__doc__
This patch fixes the problem; also, there was a missing format 
character ("?")
msg93748 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2009-10-08 16:04
Thanks for the patch, Gabriel!

Applied to trunk in r75283.  (I also fixed the indentation for the
list of order/size/alignment specifiers.)  Merged to py3k in r75284, 
release31-maint in r75285.  Leaving open for the merge to release26-maint.
msg94564 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2009-10-27 17:00
Merged to release26-maint in r75805.
History
Date User Action Args
2022-04-11 14:56:53adminsetgithub: 51327
2009-10-27 17:00:18mark.dickinsonsetstatus: open -> closed

messages: + msg94564
2009-10-08 16:04:11mark.dickinsonsetassignee: georg.brandl -> mark.dickinson
components: + Extension Modules
versions: - Python 3.1, Python 2.7, Python 3.2
nosy: + mark.dickinson

messages: + msg93748
resolution: fixed
2009-10-08 03:38:12ggenellinasetfiles: + struct.diff

nosy: + ggenellina
messages: + msg93733

keywords: + patch
2009-10-07 18:10:57orsenthilsetassignee: georg.brandl

components: + Documentation
nosy: + georg.brandl
2009-10-07 18:10:26orsenthilcreate