Merged revisions 75283 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r75283 | mark.dickinson | 2009-10-08 16:54:10 +0100 (Thu, 08 Oct 2009) | 4 lines

  Issue #7078:  _struct.__doc__ was being ignored.  Import it into struct.
  Also add description of '?' struct format character.  Thanks Gabriel
  Genellina for the patch.
........